bugfix: restore confirmation dialog when deleting node from nodelist

--- a/templates/default/node/nodelist.html
+++ b/templates/default/node/nodelist.html
@@ -282,7 +282,7 @@
 			{else}
 				{button type="link" icon="warnoff" tip="Enable notice" href="?m=nodewarn&id={$node.id}"}
 			{/if}
-			{button type="link" icon="delete" class="delete-node=" href="?m=nodedel&id={$node.id}"}
+			{button type="link" icon="delete" class="delete-node" href="?m=nodedel&id={$node.id}"}
 			{button type="link" icon="edit" href="?m=nodeedit&id={$node.id}"}
 			{button type="link" icon="info" href="?m=nodeinfo&id={$node.id}"}
 		</TD>
