--- a/templates/default/promotion/promotionschemaadd.html
+++ b/templates/default/promotion/promotionschemaadd.html
@@ -52,7 +52,7 @@
 			</td>
 			<td id="periodcont">
 				{foreach $schema.periods as $key => $period}
-					<select name="schema[periods][]" {tip class="lms-ui-combobox" text="Select length of the period (in months)"}
+					<select name="schema[periods][{$key}]" {tip class="lms-ui-combobox" text="Select length of the period (in months)"}
 						data-value="{$period}" form="schemaadd">
 						{if !$key && count($schema.periods) == 1}
 							<option value="0"{if !$period} selected{/if}>- {trans("unlimited")} -</option>
@@ -134,7 +134,7 @@
 			}
 
 			comboboxes = $('#periodcont').children('.scombobox');
-			var select = $(comboboxes[comboboxes.length - 1]).find('select').clone();
+			var select = $(comboboxes[comboboxes.length - 1]).find('select').clone().attr('name', 'schema[periods][' + comboboxes.length + ']');
 			var del = $('#perioddel');
 			select.insertBefore(del);
 
