enhancement: 'suspend' button in customer assignment box allows to suspend all assignment with single operation (LMS+ #1990)

--- a/css/templates/customer/customerassignments.less
+++ b/css/templates/customer/customerassignments.less
@@ -38,6 +38,10 @@
 			margin-bottom: 0.5em;
 			flex-wrap: initial;
 
+			button.suspend-assignments {
+				margin-bottom: 0;
+			}
+
 			button.delete-assignments {
 				margin-bottom: 0;
 			}
@@ -146,6 +150,7 @@
 		}
 	}
 
+	.suspend-assignments,
 	.delete-assignments {
 		margin-top: -0.7em;
 		margin-right: 0.5em;
